@@ -4,6 +4,8 @@ to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
 http://winmerge.org/tracker/[tracker-id]
 
 WinMerge 2.11.1.8
+  Allow reloading the file if it has been changed on the disk
+    behind WinMerge (#2354125)
   Add option to show Open-dialog on WinMerge startup (#2327424)
   Add Git to Source Control filter and fix ignore file rules (#2329381)
   Bugfix: Move confirmation dialog sometimes had wrong paths (#2327565, #2309190)
